After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721633 - bloatpad: fix the action associated with the notification
bloatpad: fix the action associated with the notification
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkApplication
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-01-06 13:07 UTC by Giovanni Campagna
Modified: 2014-01-06 15:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bloatpad: fix the action associated with the notification (2.03 KB, patch)
2014-01-06 13:07 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2014-01-06 13:07:02 UTC
Notifications can only be associated with application actions,
but clear is a window action. Introduce a "clear-all" action
that forwards to clear on all windows.
Comment 1 Giovanni Campagna 2014-01-06 13:07:04 UTC
Created attachment 265433 [details] [review]
bloatpad: fix the action associated with the notification
Comment 2 Matthias Clasen 2014-01-06 13:28:36 UTC
Review of attachment 265433 [details] [review]:

thanks, looks fine to me
Comment 3 Giovanni Campagna 2014-01-06 15:38:04 UTC
Attachment 265433 [details] pushed as f7c5dfd - bloatpad: fix the action associated with the notification